<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculMasseMolaireActivity">

    <TextView
        android:id="@+id/textViewTitle_Masse_Molaire"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#4C9E05"
        android:drawableLeft="@drawable/molecules_eau_150"
        android:gravity="top"
        android:shadowColor="#A81515"
        android:text="@string/calcul_de_masse_molaire"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_Masse_Molaire_Gauche"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_FORMULE_BRUTE"
        app:layout_constraintVertical_weight="10" />


    <TextView
        android:id="@+id/textView_Masse_Molaire_Gauche"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="#182CAF"
        android:gravity="right"
        android:text=""
        android:textColor="@color/white"
        android:textSize="12dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_Masse_Molaire_Milieu"
        app:layout_constraintHorizontal_weight="9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle_Masse_Molaire"
        app:layout_constraintVertical_weight="60" />

    <TextView
        android:id="@+id/textView_Masse_Molaire_Milieu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1025AA"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Masse_Molaire_Gauche"
        app:layout_constraintEnd_toStartOf="@+id/textView_Masse_Molaire_Droite"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/textView_Masse_Molaire_Gauche"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle_Masse_Molaire"
        app:layout_constraintVertical_weight="60" />

    <TextView
        android:id="@+id/textView_Masse_Molaire_Droite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="#192A97"
        android:gravity="left"
        android:text=""
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Masse_Molaire_Gauche"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/textView_Masse_Molaire_Milieu"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle_Masse_Molaire"
        app:layout_constraintVertical_weight="60" />

    <EditText
        android:id="@+id/editText_FORMULE_BRUTE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="src_in"
        android:hint="@string/veuillez_saisir_une_formule_brute"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTitle_Masse_Molaire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="10"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/button_Exit_MASSE_MOLAIRE"
        app:layout_constraintVertical_weight="6"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button_AJOUTER_A_LA_Liste"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="#238C28"
        android:text="@string/ajouter_a_la_liste"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_Exit_MASSE_MOLAIRE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/button_SUPPRIMER_LA_Liste"
        app:layout_constraintTop_toTopOf="@+id/button_Exit_MASSE_MOLAIRE"
        app:layout_constraintVertical_weight="2" />

    <Button
        android:id="@+id/button_SUPPRIMER_LA_Liste"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/supprimer_la_liste"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_Exit_MASSE_MOLAIRE"
        app:layout_constraintEnd_toStartOf="@+id/button_AJOUTER_A_LA_Liste"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/button_Exit_MASSE_MOLAIRE"
        app:layout_constraintTop_toTopOf="@+id/button_Exit_MASSE_MOLAIRE"
        app:layout_constraintVertical_weight="2" />

    <Button
        android:id="@+id/button_Exit_MASSE_MOLAIRE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="#3038D3"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_FORMULE_BRUTE"
        app:layout_constraintEnd_toStartOf="@+id/button_SUPPRIMER_LA_Liste"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="10" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toTopOf="@+id/adView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>